[0.6.0]
required=true
hotfix=false
Login Method
	Changed how login works, this breaks the old login. New client has to be downloaded manually.
Maintenance
	When maintenance is active all clients will be disconnected from the server
	Can only auto-login when the server is offline
Server Messages
	Can now send messages to all connected clients about important information
UI
	HD splash screen
	High-res UI for all sizes
	Added missing icons
	Logging out no longer causes UI to disappear
	New improved font :D
Explore Levels
	Now works again
	Loading icon is now removed correctly if one cannot connect to the server
	Top score is now hidden if none is available
Fixes & Improvements
	Can download levels, enemies, and bullets correctly again
	Downloading is now faster
	

[0.5.13]
date=2015-10-27
Improvements
	Steering - You can now click anywhere on the screen. This way you will be able to see the ship :)
	Credits - Changed layout
Server
	Backup every day

[0.5.12]
date=2015-07-07
Improvements
	Can continue playing the game after an error (doesn't force quit the game)
	UI Size
		Mobile devices display larger UI
		Desktop can change the UI size in settings
		Only low-res images are currently available
Bug Fixes
	Reset Password now works again

[0.5.11]
date=2015-06-30
Improvements
	Username/Email is no longer case-sensitive when logging in
	Created top bar in main menu
Explore Levels - Added information
	Difficulty (calculated automatically)
	Frustration (calculated automatically)
	Top and Player highscores
Android
	Fixed a ton of bugs. Now is playable on Android
	Improved performance on Android, and a bit on PC :P
	Panning in editors now work as intended
	Fixed network issue between Android and Server
Bug Fixes
	Highscore values are now correct after playing a level
	Auto-fetching more levels now works correctly when finding new levels
	Can now resume a level correctly
	Panning when zoomed out now works correctly